<resources>
    <string name="app_name">CalendarAppExample</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="user_name">User Name</string>
    <string name="create_profile">Create Profile</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="welcome_to_workflow">Welcome to WorkFlow!</string>
    <string name="create_a_profile">Create A Profile</string>
    <string name="an_app_that_ll_help_curb_your_procrastination">An app that\'ll help curb your procrastination!!!</string>
    <string name="to_calendar">To Calendar</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="username">Username</string>
    <string name="add_a_photo">Add A Photo</string>
    <string name="mini_profile_button">Mini Profile Button</string>
    <string name="weekly">Weekly</string>
    <string name="lt_lt_lt_lt"><![CDATA[<<<<]]></string>
    <string name="may_2023">May 2023</string>
    <string name="gt_gt_gt_gt"><![CDATA[>>>>]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tues">TUES</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="name">Name:</string>
    <string name="date">Date</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <string name="event_name">Event Name</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>