<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity"
    android:id="@+id/activity_calendar">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/miniProfileButton"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_centerInParent="true"
        android:src="@drawable/zoro"
        app:civ_border_color="#FF000000"

        app:civ_border_width="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        android:onClick="imageButtonOnClick"
        />

    <!--    <com.google.android.material.button.MaterialButton-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:insetLeft="0dp"-->
<!--        android:insetTop="0dp"-->
<!--        android:insetRight="0dp"-->
<!--        android:insetBottom="0dp"-->
<!--        android:padding="0dp"-->
<!--        app:icon="@drawable/zoro"-->
<!--        app:iconGravity="textStart"-->
<!--        app:iconPadding="0dp"-->
<!--        app:iconSize="24dp"-->
<!--        tools:layout_editor_absoluteX="16dp"-->
<!--        tools:layout_editor_absoluteY="16dp"-->
<!--        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.MaterialCalendar.Year"-->
<!--        />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

